tests/negative/continue_complex.em
int func() {
    continue;
    return 0;
}
int main() {
    return func();
}